add page title, noddings s/o

--- a/midwtf/index.html
+++ b/midwtf/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+<!-- s/o to alex noddings for writing this website -->
+<!-- not really </3 -->
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Your page title here :)</title>
+  <title>MidWTF16</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
