--- a/midwtf/parking.html
+++ b/midwtf/parking.html
@@ -36,14 +36,7 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h4>MidWTF16</h4>
-        <!-- <p></p> -->
-
-        <!-- Standard buttons -->
-        <a class="button button-primary" href="https://docs.google.com/forms/d/1MwsTQ9lmqEEn7avI9GhrEDmqE2F3MfCJw-nWadU9Hjs/">Signups</a>
-        <a class="button button-primary" href="https://paypal.me/ianek">Payment</a>
-        <a class="button " href="#">Bracket</a>
-        <a class="button " href="#">Schedule</a>
-        <a class="button button-primary" href="parking.html">Parking</a>
+        <p>After 5pm on Friday, park in the lots with blue signs <a href="https://www.google.com/maps/place/701+S+Mathews+Ave,+Urbana,+IL+61801/@40.1073662,-88.2260631,19z/data=!3m1!4b1!4m5!3m4!1s0x880cd715ea40f57f:0xa9fd30f3c43f299c!8m2!3d40.1073652!4d-88.2255159">flanking Matthews Ave (google maps)</a> immediately east of the Union.</p>
       </div>
     </div>
   </div>
