--- a/midwtf/schedule.html
+++ b/midwtf/schedule.html
@@ -36,14 +36,9 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h4>MidWTF16</h4>
-        <!-- <p></p> -->
+        <p></p>
+        <img src="schedule0.png">
 
-        <!-- Standard buttons -->
-        <a class="button button-primary" href="https://docs.google.com/forms/d/1MwsTQ9lmqEEn7avI9GhrEDmqE2F3MfCJw-nWadU9Hjs/">Signups</a>
-        <a class="button button-primary" href="https://paypal.me/ianek">Payment</a>
-        <a class="button " href="#">Bracket</a>
-        <a class="button button-primary" href="">Schedule</a>
-        <a class="button button-primary" href="parking.html">Parking</a>
       </div>
     </div>
   </div>
