add schedule to index

--- a/midwtf/index.html
+++ b/midwtf/index.html
@@ -42,7 +42,7 @@
         <a class="button button-primary" href="https://docs.google.com/forms/d/1MwsTQ9lmqEEn7avI9GhrEDmqE2F3MfCJw-nWadU9Hjs/">Signups</a>
         <a class="button button-primary" href="https://paypal.me/ianek">Payment</a>
         <a class="button " href="#">Bracket</a>
-        <a class="button button-primary" href="">Schedule</a>
+        <a class="button button-primary" href="schedule.html">Schedule</a>
         <a class="button button-primary" href="parking.html">Parking</a>
       </div>
     </div>
