--- a/midwtf/index.html
+++ b/midwtf/index.html
@@ -41,7 +41,7 @@
         <!-- Standard buttons -->
         <a class="button button-primary" href="https://docs.google.com/forms/d/1MwsTQ9lmqEEn7avI9GhrEDmqE2F3MfCJw-nWadU9Hjs/">Signups</a>
         <a class="button button-primary" href="https://paypal.me/ianek">Payment</a>
-        <a class="button " href="#">Bracket</a>
+        <a class="button button-primary" href="http://challonge.com/wtfsingles">Bracket</a>
         <a class="button button-primary" href="schedule.html">Schedule</a>
         <a class="button button-primary" href="parking.html">Parking</a>
       </div>
