--- a/midwtf/parking.html
+++ b/midwtf/parking.html
@@ -36,7 +36,8 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h4>MidWTF16</h4>
-        <p>After 5pm on Friday, park in the lots with blue signs <a href="https://www.google.com/maps/place/701+S+Mathews+Ave,+Urbana,+IL+61801/@40.1073662,-88.2260631,19z/data=!3m1!4b1!4m5!3m4!1s0x880cd715ea40f57f:0xa9fd30f3c43f299c!8m2!3d40.1073652!4d-88.2255159">flanking Matthews Ave (google maps)</a> immediately east of the Union.</p>
+        <p>After 5pm on Friday, park in the lots with blue signs flanking Matthews Ave <a href="https://www.google.com/maps/place/701+S+Mathews+Ave,+Urbana,+IL+61801/@40.1073662,-88.2260631,19z/data=!3m1!4b1!4m5!3m4!1s0x880cd715ea40f57f:0xa9fd30f3c43f299c!8m2!3d40.1073652!4d-88.2255159">(google maps)</a> immediately east of the Union.</p>
+        <img src="parking.png">
       </div>
     </div>
   </div>
